--- a/src/assets/styles/_login.less
+++ b/src/assets/styles/_login.less
@@ -1,4 +1,4 @@
-.login{
+.login-box{
     width: 340px;
     height: 355px;
     background: #fff;
@@ -6,20 +6,24 @@
     border-radius: 3px;
     .tab{
         height: 51px;
+        padding-top: 16px;
+
         li{
             float: left;
             width: 50%;
             font-size: 24px;
             text-align: center;
-            padding-top: 16px;
             cursor: pointer;
             &.active{
                 color: #ff6803;
             }
         }
+        li:nth-child(1){
+            border-right: 1px solid #dfdfdf;
+        }
     }
     .login-tab,.register-tab{
-        margin:16px 20px;
+        margin:16px 30px;
     }
     .agree{
         font-size: 12px;
@@ -47,7 +51,7 @@
             background-size: contain;
         }
     }
-    .register,.log{
+    .register,.log-rightnow{
         width: 100%;
         font-size: 18px;
         line-height: 40px;
@@ -57,8 +61,9 @@
     .register{
         background: #ff8b20;
     }
-    .log{
+    .log-rightnow{
         background: #77b716;
+        margin-top: 40px;
     }
     .box{
         line-height: 35px;
@@ -71,8 +76,22 @@
          position: relative;
         input{
             width: 210px;
-            padding: 10px 0 10px 10px;
+            padding: 10px 0 10px 20px;
            
+        }
+        .text{
+            height: 35px;
+            vertical-align: top;
+            text-align:justify;            
+            display: inline-block;
+            width: 60px;
+        }
+        .text::after{
+            content:"";
+            display: inline-block;
+            width:100%;
+            overflow:hidden;
+            height:0;
         }
     }
     .open-eyes{
