--- a/src/assets/styles/_login.less
+++ b/src/assets/styles/_login.less
@@ -27,8 +27,8 @@
     }
     .agree{
         font-size: 12px;
-        margin-bottom: 36px;
-        margin-top: 16px;
+        margin-bottom: 30px;
+        padding-top: 20px;
         .checkstatus{
             float: left;
             margin-right: 10px;
@@ -149,6 +149,40 @@
         }
         .again{
             color: #53a0e3;
+        }
+    }
+}
+.success-box{
+    width: 340px;
+    height: 231px;
+    background: #fff;
+    border-radius: 3px;
+    position: relative;
+    top: 60px;
+    font-size: 18px;  
+    p{
+      line-height: 35px;
+      padding: 40px 0 0 30px;
+      text-align: left;
+    }
+    .success{
+        margin: 0 30px;
+        p{
+            padding: 0;
+        }
+        >a{
+            font-size: 18px;
+            color: #fff;
+            display: block;
+            width: 280px;
+            height: 40px;
+            background-color: #77b716;
+            border-radius: 2px;
+            line-height: 40px;
+            text-align: center;
+            margin: 10px 0 15px 0;
+            -webkit-transition: all 0.15s ease;
+            transition: all 0.15s ease;
         }
     }
 }
