--- a/src/assets/styles/_login.less
+++ b/src/assets/styles/_login.less
@@ -137,6 +137,13 @@
     .validimg{
         font-size: 14px;
         line-height: 44px;
+        >.imgcode{
+            display:inline-block;
+            height: 40px; 
+            position: absolute;
+            right: 0;
+            bottom: 10px;
+        }
         >span{
             display:inline-block;
             height: 40px; 
