--- a/src/assets/styles/_header.less
+++ b/src/assets/styles/_header.less
@@ -28,5 +28,10 @@
             float: right;
             width: 60px;
         }
+        img{
+            width: 30px;
+            height: 30px;
+            vertical-align: middle;
+        }
     }
 }
