--- a/src/assets/styles/_login.less
+++ b/src/assets/styles/_login.less
@@ -84,7 +84,7 @@
         }
         .text{
             height: 35px;
-            vertical-align: top;
+            vertical-align: middle;
             text-align:justify;            
             display: inline-block;
             width: 60px;
@@ -136,7 +136,7 @@
     }
     .validimg{
         font-size: 14px;
-        line-height: 44px;
+        line-height: 30px;
         >.imgcode{
             display:inline-block;
             height: 40px; 
@@ -149,13 +149,14 @@
             height: 40px; 
             position: absolute;
             right: 0;
-            bottom: 0;
         }
         .count{
             color: #999;
+            top: 4px;
         }
         .again{
             color: #53a0e3;
+            top: 4px;
         }
     }
 }
