--- a/src/assets/styles/_header.less
+++ b/src/assets/styles/_header.less
@@ -21,6 +21,9 @@
             float: left;
             width: 80px;
         }
+        .active{
+            color: #688AF4;
+        }
     }
     .login{
         margin-right: 60px;
