--- a/src/assets/styles/_header.less
+++ b/src/assets/styles/_header.less
@@ -25,16 +25,22 @@
             color: #688AF4;
         }
     }
-    .login{
+    .login,.login-not{
         margin-right: 60px;
         li{
             float: right;
-            width: 60px;
         }
         img{
             width: 30px;
             height: 30px;
             vertical-align: middle;
+            margin-right: 10px;
+        }
+    }
+    .login{
+        li{
+            float: right;
+            width: 60px;
         }
     }
 }
