--- a/src/assets/styles/_login.less
+++ b/src/assets/styles/_login.less
@@ -62,6 +62,9 @@
     .register{
         background: #ff8b20;
     }
+    .dis{
+        opacity: 0.5;
+    }
     .log-rightnow{
         background: #77b716;
         margin-top: 40px;
@@ -170,7 +173,7 @@
     font-size: 18px;  
     p{
       line-height: 35px;
-      padding: 40px 0 0 30px;
+      padding: 20px 0 0 30px;
       text-align: left;
     }
     .success{
